@@ -21,6 +21,8 @@ production.
 * HTMLForm now supports multiple copies of an input field or set of input
   fields, e.g. the form may request "one or more usernames" without having to
   have the user enter delimited list of names into a text field.
+* (bug 28397) New magic word "{{DEFAULTCOLLATION:}}" to specify the default
+  collation to use for a category.
 
 === Bug fixes in 1.24 ===
 * (bug 62258) A bug was fixed in File::getUnscaledThumb when a height
